# frostgate-icap

./: Cargo.toml  README.md
docs/: design.md  migration.md
src/: adapter_registry.rs  chainadapter.rs  error.rs  ethereum_adapter.rs  lib.rs  polkadot_adapter.rs  solana_adapter.rs  types.rs  utils.rs
src/adapters/: mod.rs
src/adapters/evm/: clients.rs  events.rs  mod.rs  types.rs
src/adapters/solana/: clients.rs  events.rs  mod.rs  types.rs
src/adapters/substrate/: README.md  client.rs  events.rs  mod.rs  types.rs
src/adapters/sui/: mod.rs
src/evm/: adapter.rs  clients.rs  events.rs  mod.rs
src/registry/: config.rs  mod.rs
src/solana/: adapter.rs  clients.rs  mod.rs
src/substrate/: adapter.rs  client.rs  event.rs  events.rs  mod.rs  types.rs
src/sui/: mod.rs
src/traits/: capabilities.rs  events.rs  finality.rs  message.rs  mod.rs
src/types/: mod.rs
src/types/block/: block.rs
src/types/errors/: error.rs
src/types/transaction/: transaction.rs
