[package]
name = "frostgate-icap"
version = "0.1.0"
edition = "2021"

[dependencies]
frostgate-sdk = { path = "../frostgate-sdk" }
frostgate-zkip = { path = "../frostgate-zkip" }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
ethers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
reqwest = { workspace = true }
futures = "0.3"

# Solana dependencies
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-transaction-status = { workspace = true }
solana-program = { workspace = true }

# Substrate dependencies
subxt = { workspace = true, features = ["native", "jsonrpsee"] }
subxt-signer = { workspace = true }
sp-keyring = { workspace = true }
sp-core = { workspace = true }
blake2 = { version = "0.10.6" }

[features]
default = []
examples = []
